# api/swagger.json
@@ -9,7 +9,8 @@
   "host": "localhost:3000",
   "basePath": "/api/v1",
   "tags": [
-    { "name": "Products", "description": "API for products in the system" }
+    { "name": "Products", "description": "API for products in the system" },
+    { "name": "Brands", "description": "API for brands in the system" }
   ],
   "schemes": ["http"],
   "consumes": ["application/json"],
@@ -116,6 +117,19 @@
           }
         }
       }
+    },
+    "/brands": {
+      "get": {
+        "tags": ["Brands"],
+        "summary": "Get all brands in system",
+        "description": "This API endpoint is only to get the list of the brands, to use in create product API POST request",
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": { "$ref": "#/definitions/Brands" }
+          }
+        }
+      }
     }
   },
   "definitions": {
@@ -128,22 +142,24 @@
         "sku": { "type": "string" },
         "brand": {
           "type": "object",
-          "properties": {
-            "id": {
-              "type": "string",
-              "uniqueItems": true,
-              "format": "uuid"
-            },
-            "name": { "type": "string" }
-          }
-        },
-        "createdAt": { "type": "string", "format": "date" },
-        "updatedAt": { "type": "string", "format": "date" }
+          "$ref": "#/definitions/Brand"
+        }
       }
     },
     "Products": {
       "type": "array",
       "items": { "$ref": "#/definitions/Product" }
+    },
+    "Brand": {
+      "required": ["id", "name"],
+      "properties": {
+        "id": { "type": "string", "uniqueItems": true, "format": "uuid" },
+        "name": { "type": "string" }
+      }
+    },
+    "Brands": {
+      "type": "array",
+      "items": { "$ref": "#/definitions/Brand" }
     },
     "CreateProduct": {
       "required": ["name", "slug", "sku", "brandId"],
